2004-12-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/lily-library.scm: Bugfix.

	* Documentation/user/invoking.itely (Invoking lilypond): Bugfix.

	* mf/GNUmakefile (ALL_GEN_FILES): Remove unbuildable Fontmap.lily.

2004-12-19  Werner Lemberg  <wl@gnu.org>

	Prepare glyph shapes for mf2pt1 conversion.

	* mf/feta-eindelijk: Some formatting.
	(multi_rest_x, multi_beam_height): Removed.  Unused.
	("Quarter rest"): Use `intersectiontimes' to create a single
	outline.
	(rest_crook): Removed.  Unused.
	(draw_rest_bulb): Return path (wihtout filling).  Update callers.
	Simplified.
	(draw_eighth_rest, "16th rest", "32th rest", "64th rest",
	"128th rest"): Simplify `pat'.
	Create single outline.

2004-12-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/GNUmakefile (ALL_GEN_FILES):
	(INSTALLATION_OUT_SUFFIXES): Remove unbuildable fonts.scale.

	* scm/output-svg.scm (polygon, draw-line, dashed-line): New
	function.

2004-12-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-texstr.scm (placebox): add routine

	* VERSION (PACKAGE_NAME): release 2.5.4

	* scm/framework-texstr.scm (output-framework): new file.  

	* scm/output-texstr.scm: new file. Collect (TEXT . ) calls for TeX
	processing.

	* Documentation/user/invoking.itely (Invoking lilypond): add SVG

	* stepmake/stepmake/metafont-rules.make: make single SVG/PFA/PFB
	rule.

	* configure.in (gui_b): bump mftrace requirement to 1.1.0

	* mf/feta-bolletjes.mf (triangle): add s to 0triangle.

	* mf/GNUmakefile (ALL_GEN_FILES): make SVG files too.

2004-12-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-svg.scm (dump-page): Implement landscape.

2004-12-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (setup_paths): Add svg to search path.

	* scm/output-svg.scm:
	* scm/framework-svg.scm: Add pageSet.  Update.
	(dump-fonts): New function.
	(output-framework): Use it.

	* mf/GNUmakefile: 
	* buildscripts/gen-bigcheese-scripts.py: Also generate SVG font.
