@@ -1,5 +1,7 @@
 2004-12-20  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scm/output-svg.scm (beam): Use polygon.
+
 	* scm/lily-library.scm: Bugfix.
 
 	* Documentation/user/invoking.itely (Invoking lilypond): Bugfix.
